--- a/data/site.yml
+++ b/data/site.yml
@@ -1,2 +1,4 @@
 title: Code-alicious
 subtitle: One gSchool coding adventure, coming right up
+about_me_header: About me
+about_me: Hi, I'm Rachel Logie!  I'm currently living in beautiful Boulder, Colorado, where I am learning Ruby on Rails at gSchool.
