--- a/data/site.yml
+++ b/data/site.yml
@@ -1,4 +1,4 @@
-title: Code-alicious
-subtitle: One gSchool coding adventure, coming right up
+title: Kode Kitty
+subtitle: I write ze kode.
 about_me_header: About me
-about_me: Hi, I'm Rachel Logie!  I'm currently living in beautiful Boulder, Colorado, where I am learning Ruby on Rails at gSchool.
+about_me: Hi, I'm Rachel Logie!  I'm currently living in beautiful Boulder, Colorado!
